--- a/package.json
+++ b/package.json
@@ -21,11 +21,15 @@
     "body-parser": "^1.18.3",
     "bootstrap": "^4.1.3",
     "express": "^4.16.3",
+    "font-awesome": "^4.7.0",
     "fontawesome": "^4.7.2",
     "handlebars": "^4.0.12",
     "jquery": "^3.3.1",
     "materialize-css": "^1.0.0",
     "mongoose": "^5.3.2",
     "require": "^2.4.20"
+  },
+  "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.6.3"
   }
 }
